--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="enter_name">Nombre</string>
     <string name="enter_email">Email</string>
     <string name="enter_password">Contraseña</string>
-    <string name="registrar">Resgistrar Usuario</string>
+    <string name="registrar">Registrar Usuario</string>
     <string name="cerrar_sesion">Cerrar Sesion</string>
     <string name="inicio_sesion">Iniciar Sesion</string>
     <string name="ya_tiene_cuenta">Ya tengo Cuenta</string>
